--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="d-flex mt-5">
+  <div class="d-flex justify-content-center mt-5">
 
     <a class="btn btn-outline-secondary mr-2" href="/" role="button">GET /</a>
 
@@ -17,5 +17,9 @@
     </form>
 
   </div>
+  <div class="alert alert-dark text-center mt-3" role="alert">
+    {{message}}
+  </div>
+
 
 </div>
